--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eth-swap exchange",
+  "name": "ether_token_swap",
   "version": "0.1.0",
   "description": "An Ethereum to Token swap exchange",
   "author": "avishkarabhishek786@gmail.com",
